[tool.poetry]
name = "openapi_check"
version = "0.1.0"
description = ""
authors = ["Lilith Wittmann <mail@lilithwittmann.de>"]

[tool.poetry.dependencies]
python = "^3.8"
schemathesis = "^3.9.7"
statuspageio = "^0.0.1"
prance = "^0.21.8"
boto3 = "^1.18.30"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
